--- a/Listas-e-Tabelas/popover-desafio-original.html
+++ b/Listas-e-Tabelas/popover-desafio-original.html
@@ -73,9 +73,9 @@
     <div class="profile-container">
         <div class="profile-header">
             <h1>Perfil de Cauã Victor</h1>
-            <button class="help-button">Ajuda</button>
+            <button class="help-button" popovertarget="help-name">Ajuda</button>
 
-            <div id="help-name" class="popover-content">
+            <div id="help-name" class="popover-content" popover>
                 O nome completo do usuário. Ele pode ser alterado nas configurações de perfil.
             </div>
 
