--- a/css-seletores/pseudo-classes.html
+++ b/css-seletores/pseudo-classes.html
@@ -9,16 +9,14 @@
     <style>
         button {
             background-color: #7a7979;
-            color: white;
+            color: rgb(255, 0, 0);
             border: none;
             padding: 1em;
             margin-bottom: .5em;
         }
-
         button:disabled {
             opacity: .5;
         }
-
         p:empty:before {
             content: "paragrafo vazio ????"
         }
@@ -27,7 +25,6 @@
         a:focus {
             background-color: yellow;
         }
-
         input[type="text"]:read-write {
             background-color: #999;
             border: none;
@@ -51,7 +48,7 @@
         }
 
         p:only-child {
-            background-color: orangered;
+            background-color: orange;
         }
 
         p:read-write {
@@ -122,22 +119,7 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 </body>
 
 </html>
